todo:
isRebootRequested : http://askubuntu.com/questions/28530/how-can-i-tell-what-package-requires-a-reboot-of-my-system
mac getIpByName liefert name von IPnum

opsi-script (4.12.17.0) unreleased; urgency=medium

 * [fix] oslog.pas, opsiscript.lpr: include cwstring, clocale (j.werner. !249)


-- j.werner <j.werner@uib.de> 30 August 2024


opsi-script (4.12.16.0) unreleased/released (4.2/4.3); urgency=medium

* [fix] osparser: tssleep - handling of syntax and runtime errors (m.michaelis, !242)
* [fix] powershellcall/ExecWith powershell:  approvments in runnning of powershell
           commands on machines were powershell scripts are restricetd. (j.werner, !243)
* [fix] HasMinimumSpace for Linux and macOS, issue 38:
        osparser: evaluateBoolean: HasMinimumSpace: Handle first parameter (s1)
        s1 should be a directory at Unix (Linux / macOS)
        s1 = empty = actual dir ".", s1= %SYSTEMDRIVE% = warning and fallback to root dir: "/"
        (d.oertel, !246) 
* [change] remove logging indents, set loglevel for IF-Conditions to "Debug2" (j.werner, !244)
* [change] oswebservice.pas: refactor states and actions, cleanup unused variables, remove opsidata
           (d.oertel, !245)

-- j.werner <j.werner@uib.de> 08 August 2024


opsi-script (4.12.15.4) unreleased/testing (4.2/4.3); urgency=medium

* [fix] osjson : convert jsonArray from / to stringlist, functions jsonAsArrayToStringList, stringListToJsonArray
* [fix] osmain, oswebservice: fix memory problem in "Produkte" (list of products was empty or wrong)
        when using reload product sequence e.g. in opsi-auto-update
* [fix] osfunc.pas: DeleteFileWithRetries() is only for windows, include compiler switch {$IFDEF WINDOWS}
* [fix] osparser.pas:: sleepseconds (tssleep) - no parameter error message in testsyntax mode

-- j.werner <j.werner@uib.de> 17 July 2024


opsi-script (4.12.15.3) unreleased/stable (4.2/4.3); urgency=medium
