@@ -2,6 +2,7 @@ todo:
 isRebootRequested : http://askubuntu.com/questions/28530/how-can-i-tell-what-package-requires-a-reboot-of-my-system
 mac getIpByName liefert name von IPnum
 
+
 opsi-script (4.12.17.0) unreleased; urgency=medium
 
  * [fix] oslog.pas, opsiscript.lpr: include cwstring, clocale (j.werner. !249)
@@ -9,6 +10,14 @@ opsi-script (4.12.17.0) unreleased; urgency=medium
 
 -- j.werner <j.werner@uib.de> 30 August 2024
 
+opsi-script (4.12.16.1) unreleased/unreleased (4.2/4.3); urgency=medium
+
+* [fix] powershellcall/ExecWith powershell:
+   output is at least a stringlist with one empty element instead of empty list
+   TuibInstScript.executeWith: with powershell:
+   clear output list if there is just one empty element
+
+-- d.oertel <d.oertel@uib.de> 11 September 2024
 
 opsi-script (4.12.16.0) unreleased/released (4.2/4.3); urgency=medium
 
